// Copyright 2023 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

message DownstreamEvent {

  message Metric {
    reserved 5 to 1000;
    string name = 1;
    float threshold = 2;
    float value = 3;
    float margin = 4;
  }

  reserved 7 to 1000;
  string project_id = 1;
  string instance_id = 2;
  optional int32 current_size = 3;
  optional int32 suggested_size = 4;
  optional Units units = 5;
  repeated Metric metrics = 6;
}

enum Units {
  NODES = 0;
  PROCESSING_UNITS = 1;
}
